# rust_chip8

./: Cargo.toml  README.md
res/: config.yml
res/demos/: adder.ch8  adder.txt.ch8  bindump.py
res/shaders/: shader_150.glslv
src/: cpu.rs  font.rs  graphics.rs  main.rs  screen.rs
tools/: default.nix
