[package]
name = "rust_chip8"
version = "0.1.0"
authors = ["Benson Chau <bchau3440@gmail.com>"]

[dependencies]
rand = "0.5"
clap = { version = "~2.32", features = ["yaml"] }
piston_window = "0.81.0"
piston = "0.38.0"
piston2d-graphics = "0.27.0"
pistoncore-glutin_window = "0.49.0"
piston2d-opengl_graphics = "0.55.0"

[dependencies.gtk]
version = "0.4.1"
features = ["v3_22"]
